# True-seat

./: BUILD_AND_DEPLOY.md  README.md  SOLANA_PLAYGROUND_CARGO.toml  SOLANA_PLAYGROUND_CODE.rs  SOLANA_PLAYGROUND_CODE_FIXED.rs  SOLANA_PLAYGROUND_MINIMAL.rs  SOLANA_PLAYGROUND_SETUP.txt  SOLANA_PROGRAM_FIXED.rs  deploy-minimal.sh  package-lock.json  package.json  prepare-for-playground.sh
contracts/: README.md  hardhat.config.ts  package-lock.json  package.json
contracts/scripts/: check-balance.ts  deploy.ts
event-tickets/: Anchor.toml  package.json  rust-toolchain.toml
event-tickets/programs/event-tickets/: Cargo.toml
event-tickets/programs/event-tickets/src/: lib.rs
event-tickets/programs/minimal-event-tickets/: Cargo.toml
event-tickets/programs/minimal-event-tickets/src/: lib.rs
event-tickets/scripts/: deploy-devnet.sh  deploy-mainnet.sh
event-tickets/tests/: event-tickets.ts
minimal-program/: Cargo.toml  build.sh
minimal-program/src/: lib.rs
scripts/: create-example-events.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/about/: page.tsx
src/app/api/pinata/: route.ts
src/app/contact/: page.tsx
src/app/events/: page.tsx
src/app/owned/: page.tsx
src/app/test-events/: page.tsx
src/components/: BuyTicketsModal.tsx  ChatBot.tsx  CreateEventModal.tsx  EventPreviewModal.tsx  Navigation.tsx  PhantomCheck.tsx  ViewTicketModal.tsx
src/lib/: contract.ts  solana.ts
